--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,11 @@
                                 <i class="bi bi-award"></i> 策略评分
                             </a>
                         </li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('admin.db_diagnose_page') }}">
+								<i class="bi bi-hdd-network"></i> 数据库管理
+							</a>
+						</li>
                     </ul>
                 </div>
             </div>
