--- a/templates/index.html
+++ b/templates/index.html
@@ -342,7 +342,7 @@
                     </div>
                     <!-- 第二行快捷操作 -->
                     <div class="row">
-                        <div class="col-md-3 mb-3">
+						<div class="col-md-3 mb-3">
                             <a href="{{ url_for('strategy.strategies') }}"
                                class="btn btn-primary btn-lg w-100">
                                 <i class="bi bi-diagram-3"></i>
@@ -366,17 +366,14 @@
                                 已删除记录
                             </a>
                         </div>
-                        <div class="col-md-3 mb-3">
-                            <div class="card bg-light h-100">
-                                <div class="card-body text-center d-flex flex-column justify-content-center">
-                                    <div class="text-muted">
-                                        <i class="bi bi-info-circle fs-3"></i>
-                                        <br>
-                                        <small>更多功能敬请期待</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+						<div class="col-md-3 mb-3">
+							<a href="{{ url_for('admin.db_diagnose_page') }}"
+							   class="btn btn-outline-dark btn-lg w-100">
+								<i class="bi bi-hdd-network"></i>
+								<br>
+								数据库管理
+							</a>
+						</div>
                     </div>
                 </div>
             </div>
