--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,11 @@
                             </a>
                         </li>
 						<li class="nav-item">
+							<a class="nav-link" href="{{ url_for('macro.dashboard') }}">
+								<i class="bi bi-globe2"></i> 宏观观察
+							</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="{{ url_for('admin.db_diagnose_page') }}">
 								<i class="bi bi-hdd-network"></i> 数据库管理
 							</a>
